samples/_failures_safe/1761041868_2a598f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_281bbca3.c: In function ‘main’:
./samples/SAFE/__tmp_281bbca3.c:159:13: error: expected declaration or statement at end of input
  159 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_281bbca3.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_281bbca3.c:159:13: error: expected declaration or statement at end of input
